--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+astroid @ file:///tmp/build/80754af9/astroid_1592495881661/work
 attrs==19.3.0
+awsebcli==3.18.1
 bcrypt==3.1.7
 blessed==1.17.8
 botocore==1.15.49
@@ -19,6 +21,7 @@ docutils==0.15.2
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
 future==0.16.0
+gunicorn==20.0.4
 idna==2.7
 importlib-metadata==1.7.0
 isort==4.3.21
@@ -34,6 +37,7 @@ paramiko==2.7.1
 pathspec==0.5.9
 protobuf==3.6.0
 pycparser==2.20
+pylint @ file:///tmp/build/80754af9/pylint_1592496044040/work
 PyNaCl==1.4.0
 pyOpenSSL==19.1.0
 pyrsistent==0.16.0
@@ -47,6 +51,7 @@ six==1.11.0
 SQLAlchemy==1.3.17
 termcolor==1.1.0
 texttable==1.6.2
+toml @ file:///tmp/build/80754af9/toml_1592853716807/work
 typed-ast==1.4.1
 urllib3==1.24.3
 wcwidth==0.1.9
