--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+dist: bionic
 language: python
-python:
-  - "3.7"
+sudo: required
+python: "3.6"
+
 install: pip install -r requirements.txt
+
+script: python test.py
+
 deploy:
   provider: heroku
   api_key: $HEROKU_TOKEN
-  app: ecdserver
+  app: enriching-customer-database
